--- a/interests.html
+++ b/interests.html
@@ -114,8 +114,8 @@
           <p>The key content previously on this page was moved to the following sections:</p>
 
 <ul>
-  <li><a href="/#ideology">/#ideology</a></li>
-  <li><a href="/#projects-todo">/#projects-todo</a></li>
+  <li><a href="/#ciro-santillis-ideology">/#ciro-santillis-ideology</a></li>
+  <li><a href="/#the-most-important-projects-ciro-santilli-wants-to-do">/#the-most-important-projects-ciro-santilli-wants-to-do</a></li>
 </ul>
 
 <p>I really like open source. It gives more opportunities to the poor countries, and reduces lock-in to my current employer. Shame it is not always economically feasible…</p>
