--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
           <p>The key content previously on this page was moved to the following sections:</p>
 
 <ul>
-  <li><a href="/#projects-done">/#projects-done</a></li>
+  <li><a href="/#the-most-important-projects-done-by-ciro-santilli">/#the-most-important-projects-done-by-ciro-santilli</a></li>
 </ul>
 
 <ol id="markdown-toc">
