--- a/accounts.html
+++ b/accounts.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>Redirecting...</title>
   
-  <link rel="canonical" href="/#accounts"/>
-  <meta http-equiv="refresh" content="0;url=/#accounts" />
+  <link rel="canonical" href="/#accounts-controlled-by-ciro-santilli"/>
+  <meta http-equiv="refresh" content="0;url=/#accounts-controlled-by-ciro-santilli" />
 </head>
 <body>
   <h1>Redirecting...</h1>
-  <a href="/#accounts">Click here if you are not redirected.<a>
-  <script>location='/#accounts'</script>
+  <a href="/#accounts-controlled-by-ciro-santilli">Click here if you are not redirected.<a>
+  <script>location='/#accounts-controlled-by-ciro-santilli'</script>
 </body>
 </html>
