--- a/skills.html
+++ b/skills.html
@@ -113,7 +113,7 @@
           
           <p>Non-technical skills were moved to: <a href="/#ciro-santillis-skills">/#ciro-santillis-skills</a></p>
 
-<p>I’m not keeping this up-to-date for now as it is too hard to put a number on any skill, and because I haven’t for a job in a while ;-) What really matters are <a href="/#projects-done">my projects</a>.</p>
+<p>I’m not keeping this up-to-date for now as it is too hard to put a number on any skill, and because I haven’t for a job in a while ;-) What really matters are <a href="/#the-most-important-projects-done-by-ciro-santilli">my projects</a>.</p>
 
 <ol id="markdown-toc">
   <li><a href="#programming-languages" id="markdown-toc-programming-languages">Programming languages</a></li>
