03d64740a2e0f8f3ae88918cc222bf6dadb30a08

--- a/index.html
+++ b/index.html
@@ -180,12 +180,23 @@ body {
 <li><a href="#quantum-electrodynamics">8.2.6. Quantum Electrodynamics</a>
 <ul class="sectlevel4">
 <li><a href="#what-does-it-mean-that-photons-are-force-carriers-for-electromagnetism">8.2.6.1. What does it mean that photons are force carriers for electromagnetism?</a></li>
+<li><a href="#quantum-electrodynamics-bibliography">8.2.6.2. Quantum Electrodynamics bibliography</a>
+<ul class="sectlevel5">
+<li><a href="#richard-feynman-quantum-electrodynamics-lecture-at-university-of-auckland-in-1979">8.2.6.2.1. Richard Feynman Quantum Electrodynamics Lecture at University of Auckland in 1979</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#quantum-chromodynamics">8.2.7. Quantum Chromodynamics</a></li>
 <li><a href="#photon">8.2.8. Photon</a>
 <ul class="sectlevel4">
-<li><a href="#planck-einstein-relation">8.2.8.1. Planck-Einstein relation</a></li>
+<li><a href="#single-photon-production-and-detection-experiments">8.2.8.1. Single photon production and detection experiments</a>
+<ul class="sectlevel5">
+<li><a href="#photomultiplier-tube">8.2.8.1.1. Photomultiplier tube</a></li>
+<li><a href="#silicon-photomultiplier">8.2.8.1.2. Silicon photomultiplier</a></li>
+</ul>
+</li>
+<li><a href="#planck-einstein-relation">8.2.8.2. Planck-Einstein relation</a></li>
 </ul>
 </li>
 </ul>
@@ -2679,6 +2690,16 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </ul>
 </div>
 </li>
+<li>
+<p>Fast cameras. OK, this takes it to the next level:</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=EtsXgODHMWk" class="bare">https://www.youtube.com/watch?v=EtsXgODHMWk</a> "Visualizing video at the speed of light — one trillion frames per second" by "Massachusetts Institute of Technology (MIT)" published on Dec 12, 2011</p>
+</li>
+</ul>
+</div>
+</li>
 </ul>
 </div>
 </div>
@@ -2974,6 +2995,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="paragraph">
 <p><a href="https://en.wikipedia.org/wiki/Quantum_electrodynamics" class="bare">https://en.wikipedia.org/wiki/Quantum_electrodynamics</a></p>
 </div>
+<div class="paragraph">
+<p>Theory that describes electrons and photons really well, and as Feynman puts it, <a href="https://youtu.be/eLQ2atfqk2c?list=PL8590A6E18255B3F4&amp;t=1047">accounts very precisely for all physical phenomena we have ever observed, except for gravity and nuclear physics</a>.</p>
+</div>
 <div class="sect4">
 <h5 id="what-does-it-mean-that-photons-are-force-carriers-for-electromagnetism"><a class="anchor" href="#what-does-it-mean-that-photons-are-force-carriers-for-electromagnetism"></a><a class="link" href="#what-does-it-mean-that-photons-are-force-carriers-for-electromagnetism">8.2.6.1. What does it mean that photons are force carriers for electromagnetism?</a></h5>
 <div class="paragraph">
@@ -2981,6 +3005,15 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </div>
 <div class="paragraph">
 <p>TODO find / create decent answer.</p>
+</div>
+</div>
+<div class="sect4">
+<h5 id="quantum-electrodynamics-bibliography"><a class="anchor" href="#quantum-electrodynamics-bibliography"></a><a class="link" href="#quantum-electrodynamics-bibliography">8.2.6.2. Quantum Electrodynamics bibliography</a></h5>
+<div class="sect5">
+<h6 id="richard-feynman-quantum-electrodynamics-lecture-at-university-of-auckland-in-1979"><a class="anchor" href="#richard-feynman-quantum-electrodynamics-lecture-at-university-of-auckland-in-1979"></a><a class="link" href="#richard-feynman-quantum-electrodynamics-lecture-at-university-of-auckland-in-1979">8.2.6.2.1. Richard Feynman Quantum Electrodynamics Lecture at University of Auckland in 1979</a></h6>
+<div class="paragraph">
+<p>Can&#8217;t find official video, so going with the upload by <a href="https://www.youtube.com/watch?v=eLQ2atfqk2c&amp;list=PL8590A6E18255B3F4" class="bare">https://www.youtube.com/watch?v=eLQ2atfqk2c&amp;list=PL8590A6E18255B3F4</a> by "ReasonPublic" for now&#8230;&#8203;</p>
+</div>
 </div>
 </div>
 </div>
@@ -3006,6 +3039,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <li>
 <p><a href="#double-slit-experiment">Double slit experiment</a></p>
 </li>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Newton%27s_rings" class="bare">https://en.wikipedia.org/wiki/Newton%27s_rings</a></p>
+</li>
 </ul>
 </div>
 <div class="paragraph">
@@ -3019,13 +3055,68 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <li>
 <p><a href="#photoelectric-effect">Photoelectric effect</a></p>
 </li>
+<li>
+<p><a href="#single-photon-production-and-detection-experiments">Single photon production and detection experiments</a></p>
+</li>
 </ul>
 </div>
 <div class="paragraph">
 <p>This duality is fully described mathematically by <a href="#quantum-electrodynamics">Quantum Electrodynamics</a>.</p>
 </div>
 <div class="sect4">
-<h5 id="planck-einstein-relation"><a class="anchor" href="#planck-einstein-relation"></a><a class="link" href="#planck-einstein-relation">8.2.8.1. Planck-Einstein relation</a></h5>
+<h5 id="single-photon-production-and-detection-experiments"><a class="anchor" href="#single-photon-production-and-detection-experiments"></a><a class="link" href="#single-photon-production-and-detection-experiments">8.2.8.1. Single photon production and detection experiments</a></h5>
+<div class="paragraph">
+<p>You can&#8217;t get more direct than this in terms of proving that <a href="#photon">photons</a> exist!</p>
+</div>
+<div class="paragraph">
+<p>TODO find decent experiment video.</p>
+</div>
+<div class="paragraph">
+<p>The detection apparatus is called a photomultiplier: <a href="https://en.wikipedia.org/wiki/Photomultiplier" class="bare">https://en.wikipedia.org/wiki/Photomultiplier</a></p>
+</div>
+<div class="paragraph">
+<p>There are two types:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#photomultiplier-tube">Photomultiplier tube</a></p>
+</li>
+<li>
+<p><a href="#silicon-photomultiplier">Silicon photomultiplier</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><a href="https://www.youtube.com/watch?v=dyXq1u87qew" class="bare">https://www.youtube.com/watch?v=dyXq1u87qew</a></p>
+</div>
+<div class="paragraph">
+<p>Single photon production is described briefly at: <a href="https://youtu.be/F1GaTizdcb8?t=47" class="bare">https://youtu.be/F1GaTizdcb8?t=47</a> "How do you produce a single photon?" by "Physics World" which mentions parametric down conversion: <a href="https://en.wikipedia.org/wiki/Spontaneous_parametric_down-conversion" class="bare">https://en.wikipedia.org/wiki/Spontaneous_parametric_down-conversion</a></p>
+</div>
+<div class="sect5">
+<h6 id="photomultiplier-tube"><a class="anchor" href="#photomultiplier-tube"></a><a class="link" href="#photomultiplier-tube">8.2.8.1.1. Photomultiplier tube</a></h6>
+<div class="paragraph">
+<p><a href="https://en.wikipedia.org/wiki/Photomultiplier_tube" class="bare">https://en.wikipedia.org/wiki/Photomultiplier_tube</a></p>
+</div>
+<div class="paragraph">
+<p>Feynman likes them, here he describes the tube one: <a href="https://youtu.be/eLQ2atfqk2c?t=2198" class="bare">https://youtu.be/eLQ2atfqk2c?t=2198</a> "QED: Photons&#8201;&#8212;&#8201;Corpuscles of Light&#8201;&#8212;&#8201;Richard Feynman (1/4)" (University of Auckland, 1979) by "ReasonPublic".</p>
+</div>
+<div class="paragraph">
+<p>It uses the <a href="#photoelectric-effect">Photoelectric effect</a> multiple times to produce a chain reaction.</p>
+</div>
+</div>
+<div class="sect5">
+<h6 id="silicon-photomultiplier"><a class="anchor" href="#silicon-photomultiplier"></a><a class="link" href="#silicon-photomultiplier">8.2.8.1.2. Silicon photomultiplier</a></h6>
+<div class="paragraph">
+<p><a href="https://en.wikipedia.org/wiki/Silicon_photomultiplier" class="bare">https://en.wikipedia.org/wiki/Silicon_photomultiplier</a></p>
+</div>
+<div class="paragraph">
+<p>Here is a vendor showcasing their device. They claim in that video that a single photon is produced and detected: <a href="https://www.youtube.com/watch?v=dyXq1u87qew" class="bare">https://www.youtube.com/watch?v=dyXq1u87qew</a> "How to use an SiPM - Experiment Video" by "SensLTech".</p>
+</div>
+</div>
+</div>
+<div class="sect4">
+<h5 id="planck-einstein-relation"><a class="anchor" href="#planck-einstein-relation"></a><a class="link" href="#planck-einstein-relation">8.2.8.2. Planck-Einstein relation</a></h5>
 <div class="paragraph">
 <p><a href="https://en.wikipedia.org/wiki/Planck%E2%80%93Einstein_relation" class="bare">https://en.wikipedia.org/wiki/Planck%E2%80%93Einstein_relation</a></p>
 </div>
