9acdf32a22456d34bf67f50eda1599f18fc2fdc7

--- a/x86-paging.html
+++ b/x86-paging.html
@@ -1288,12 +1288,7 @@ Text
 
 <h3 id="arm">ARM</h3>
 
-<p>Some interesting features and characteristics of ARMv8 page tables:</p>
-
-<ul>
-  <li>9 9 9 9 address split</li>
-  <li>pages other than the last level (3 if you count from 0) can be leaves. When this happens, the page is larger than 4k (since more bits are left for the offset)</li>
-</ul>
+<p>Information about ARM paging can be found at: https://github.com/cirosantilli/linux-kernel-module-cheat#arm-paging</p>
 
 <h2 id="bibliography">Bibliography</h2>
 
