7a01ec962167bd100fefa3603b5c6cba5608a527

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ body {
 <li><a href="#write-free-books-to-get-famous-website-motivation">1.2.1.1. Write free books to get famous website motivation</a></li>
 </ul>
 </li>
-<li><a href="#design-a-large-cohesive-game-world-for-robotic-like-artificial-intelligence-development">1.2.2. Design a large cohesive game world for robotic-like artificial intelligence development</a></li>
-<li><a href="#create-a-website-front-end-for-a-mathematical-formal-proof-system">1.2.3. Create a website front-end for a mathematical formal proof system</a></li>
+<li><a href="#large-cohesive-game-world-for-robotic-like-artificial-intelligence-development">1.2.2. Large cohesive game world for robotic-like artificial intelligence development</a></li>
+<li><a href="#website-front-end-for-a-mathematical-formal-proof-system">1.2.3. Website front-end for a mathematical formal proof system</a></li>
 <li><a href="#molecular-biology-is-the-next-big-thing-so-do-anything-in-that-area">1.2.4. Molecular biology is the next big thing so do anything in that area</a></li>
-<li><a href="#create-videos-of-all-key-physics-experiments">1.2.5. Create videos of all key physics experiments</a></li>
+<li><a href="#videos-of-all-key-physics-experiments">1.2.5. Videos of all key physics experiments</a></li>
 </ul>
 </li>
 <li><a href="#the-best-articles-by-ciro-santilli">1.3. The best articles by Ciro Santilli</a></li>
@@ -674,7 +674,7 @@ body {
 </div>
 </div>
 <div class="sect3">
-<h4 id="design-a-large-cohesive-game-world-for-robotic-like-artificial-intelligence-development"><a class="anchor" href="#design-a-large-cohesive-game-world-for-robotic-like-artificial-intelligence-development"></a><a class="link" href="#design-a-large-cohesive-game-world-for-robotic-like-artificial-intelligence-development">1.2.2. Design a large cohesive game world for robotic-like artificial intelligence development</a></h4>
+<h4 id="large-cohesive-game-world-for-robotic-like-artificial-intelligence-development"><a class="anchor" href="#large-cohesive-game-world-for-robotic-like-artificial-intelligence-development"></a><a class="link" href="#large-cohesive-game-world-for-robotic-like-artificial-intelligence-development">1.2.2. Large cohesive game world for robotic-like artificial intelligence development</a></h4>
 <div class="paragraph">
 <p>Prototype: <a href="https://github.com/cirosantilli/Urho3D-cheat" class="bare">https://github.com/cirosantilli/Urho3D-cheat</a> YouTube demo: <a href="https://www.youtube.com/watch?v=j_fl4xoGTKU" class="bare">https://www.youtube.com/watch?v=j_fl4xoGTKU</a></p>
 </div>
@@ -742,12 +742,12 @@ body {
 </div>
 </div>
 <div class="sect3">
-<h4 id="create-a-website-front-end-for-a-mathematical-formal-proof-system"><a class="anchor" href="#create-a-website-front-end-for-a-mathematical-formal-proof-system"></a><a class="link" href="#create-a-website-front-end-for-a-mathematical-formal-proof-system">1.2.3. Create a website front-end for a mathematical formal proof system</a></h4>
+<h4 id="website-front-end-for-a-mathematical-formal-proof-system"><a class="anchor" href="#website-front-end-for-a-mathematical-formal-proof-system"></a><a class="link" href="#website-front-end-for-a-mathematical-formal-proof-system">1.2.3. Website front-end for a mathematical formal proof system</a></h4>
 <div class="paragraph">
 <p>When <a href="#ciro-santilli">Ciro Santilli</a> first learnt the old <a href="https://en.wikipedia.org/wiki/Zermelo%E2%80%93Fraenkel_set_theory">Zermelo–Fraenkel set theory</a> and the idea of <a href="https://en.wikipedia.org/wiki/Formal_proof">Formal proofs</a>, his mind was completely blown.</p>
 </div>
 <div class="paragraph">
-<p>Finally, there it was: a proper and precise definition of <a href="#mathematics">Mathematics</a>, including a definition of integers, reals and limits!</p>
+<p>Finally, there it was: a proper and precise definition of <a href="#mathematics">Mathematics</a>, including <a href="https://en.wikipedia.org/wiki/Set-theoretic_definition_of_natural_numbers">a definition of integers</a>, reals and limits!</p>
 </div>
 <div class="paragraph">
 <p>Theorems are strings, proofs are string manipulations, and axioms are the initial strings that you can use.</p>
@@ -761,13 +761,13 @@ body {
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/coq/coq" class="bare">https://github.com/coq/coq</a></p>
-</li>
-<li>
 <p><a href="https://github.com/HOL-Theorem-Prover/HOL" class="bare">https://github.com/HOL-Theorem-Prover/HOL</a></p>
 </li>
 <li>
 <p><a href="https://github.com/seL4/isabelle" class="bare">https://github.com/seL4/isabelle</a>. Rumours have it that this is "uncompilable" from source without <a href="#evil">blobs</a>. It does however offer a very rich IDE.</p>
+</li>
+<li>
+<p><a href="https://github.com/coq/coq" class="bare">https://github.com/coq/coq</a></p>
 </li>
 <li>
 <p><a href="http://metamath.org/" class="bare">http://metamath.org/</a> this one is likely an older and less powerful system, but the web presentation and tutorial are very good! Source: <a href="https://github.com/metamath/metamath-exe" class="bare">https://github.com/metamath/metamath-exe</a> Here is a proof that 2 + 2 equals 4: <a href="http://us.metamath.org/mpeuni/2p2e4.html" class="bare">http://us.metamath.org/mpeuni/2p2e4.html</a></p>
@@ -832,6 +832,19 @@ body {
 <div class="paragraph">
 <p>All proofs can be conditional: the package registry simply shows clearly what axiom set a theorem is based on.</p>
 </div>
+<div class="paragraph">
+<p>Bibliography:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://math.stackexchange.com/questions/1767070/what-is-the-current-state-of-formalized-mathematics/3297536#3297536" class="bare">https://math.stackexchange.com/questions/1767070/what-is-the-current-state-of-formalized-mathematics/3297536#3297536</a></p>
+</li>
+<li>
+<p><a href="https://stackoverflow.com/questions/19421234/how-do-i-generate-latex-from-isabelle-hol" class="bare">https://stackoverflow.com/questions/19421234/how-do-i-generate-latex-from-isabelle-hol</a></p>
+</li>
+</ul>
+</div>
 </div>
 <div class="sect3">
 <h4 id="molecular-biology-is-the-next-big-thing-so-do-anything-in-that-area"><a class="anchor" href="#molecular-biology-is-the-next-big-thing-so-do-anything-in-that-area"></a><a class="link" href="#molecular-biology-is-the-next-big-thing-so-do-anything-in-that-area">1.2.4. Molecular biology is the next big thing so do anything in that area</a></h4>
@@ -889,7 +902,7 @@ body {
 </div>
 </div>
 <div class="sect3">
-<h4 id="create-videos-of-all-key-physics-experiments"><a class="anchor" href="#create-videos-of-all-key-physics-experiments"></a><a class="link" href="#create-videos-of-all-key-physics-experiments">1.2.5. Create videos of all key physics experiments</a></h4>
+<h4 id="videos-of-all-key-physics-experiments"><a class="anchor" href="#videos-of-all-key-physics-experiments"></a><a class="link" href="#videos-of-all-key-physics-experiments">1.2.5. Videos of all key physics experiments</a></h4>
 <div class="paragraph">
 <p>It is unbelievable that you can&#8217;t find easily on YouTube recreations of many of the key physics / chemistry experiments.</p>
 </div>
@@ -1307,7 +1320,7 @@ body {
 <p>AGI alone would be very dangerous, in case it can get control of our nuclear arsenals through software zero days or <a href="https://en.wikipedia.org/wiki/Social_engineering_%28security%29">social engineering</a>. Although some <a href="https://www.quora.com/Could-a-group-of-hackers-break-into-military-networks-and-launch-or-detonate-nuclear-missiles">claim that is unlikely</a>.</p>
 </div>
 <div class="paragraph">
-<p>Humanity&#8217;s best bet to achieve silicon AGI today is to work on: <a href="#design-a-large-cohesive-game-world-for-robotic-like-artificial-intelligence-development">Design a large cohesive game world for robotic-like artificial intelligence development</a></p>
+<p>Humanity&#8217;s best bet to achieve silicon AGI today is to work on: <a href="#large-cohesive-game-world-for-robotic-like-artificial-intelligence-development">Large cohesive game world for robotic-like artificial intelligence development</a></p>
 </div>
 </div>
 <div class="sect3">
@@ -2453,7 +2466,20 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>Stuff that is beautiful but useless because it does not make food or houses cheaper.</p>
 </div>
 <div class="paragraph">
-<p>There is some art however that lives in the fine intersection between beauty and usefulness.</p>
+<p>There is some art however that lives in the fine intersection between beauty and usefulness:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#mathematics">Mathematics</a></p>
+</li>
+<li>
+<p><a href="#physics">Physics</a></p>
+</li>
+<li>
+<p><a href="#computer">Computer</a></p>
+</li>
+</ul>
 </div>
 <div class="sect2">
 <h3 id="the-best-video-game-content-of-all-time"><a class="anchor" href="#the-best-video-game-content-of-all-time"></a><a class="link" href="#the-best-video-game-content-of-all-time">6.1. The best video game content of all time</a></h3>
@@ -2704,7 +2730,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect2">
 <h3 id="the-most-important-physics-experiments"><a class="anchor" href="#the-most-important-physics-experiments"></a><a class="link" href="#the-most-important-physics-experiments">8.1. The most important physics experiments</a></h3>
 <div class="paragraph">
-<p>Videos should be found / made for all of those: <a href="#create-videos-of-all-key-physics-experiments">Create videos of all key physics experiments</a></p>
+<p>Videos should be found / made for all of those: <a href="#videos-of-all-key-physics-experiments">Videos of all key physics experiments</a></p>
 </div>
 <div class="sect3">
 <h4 id="speed-of-light-experiments"><a class="anchor" href="#speed-of-light-experiments"></a><a class="link" href="#speed-of-light-experiments">8.1.1. Speed of light experiments</a></h4>
@@ -2829,7 +2855,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>Currently an informal name for the <a href="https://en.wikipedia.org/wiki/Standard_Model">Standard Model</a>.</p>
 </div>
 <div class="paragraph">
-<p>Key outline of the theories:</p>
+<p>Chronologic outline of the key theories:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -3197,6 +3223,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p><a href="https://en.wikipedia.org/wiki/Mathematics" class="bare">https://en.wikipedia.org/wiki/Mathematics</a></p>
 </div>
 <div class="paragraph">
+<p>Here is a more understandable description of the semi-satire that follows: <a href="https://math.stackexchange.com/questions/53969/what-does-formal-mean/3297537#3297537" class="bare">https://math.stackexchange.com/questions/53969/what-does-formal-mean/3297537#3297537</a></p>
+</div>
+<div class="paragraph">
 <p>A <a href="#art">beautiful game</a> played on <a href="https://en.wikipedia.org/wiki/String_(computer_science">strings</a>, which mathematicians call <a href="https://en.wikipedia.org/wiki/Theorem">"theorems"</a>.</p>
 </div>
 <div class="paragraph">
@@ -3225,7 +3254,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>Finding proofs however is undoubtedly an <a href="https://en.wikipedia.org/wiki/NP-hardness">NP-hard</a> problem.</p>
 </div>
 <div class="paragraph">
-<p>Most mathematicians can&#8217;t code or deal with the real world in general however, so they haven&#8217;t created the obviously necessary: <a href="#create-a-website-front-end-for-a-mathematical-formal-proof-system">Create a website front-end for a mathematical formal proof system</a>.</p>
+<p>Most mathematicians can&#8217;t code or deal with the real world in general however, so they haven&#8217;t created the obviously necessary: <a href="#website-front-end-for-a-mathematical-formal-proof-system">Website front-end for a mathematical formal proof system</a>.</p>
 </div>
 <div class="paragraph">
 <p>The fact that Mathematics happens to be the best way to describe <a href="#physics">Physics</a> and that humans can use physical intution heuristics to reach the NP-hard proofs of mathematics is one of the great miracles of the universe.</p>
@@ -3341,7 +3370,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>the 2019 <a href="#china">Chinese government</a></p>
 </li>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Binary_large_object">BLOBS</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Binary_large_object">BLOBs</a></p>
 </li>
 </ul>
 </div>
@@ -3365,7 +3394,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p><a href="https://en.wikipedia.org/wiki/Computer" class="bare">https://en.wikipedia.org/wiki/Computer</a></p>
 </div>
 <div class="paragraph">
-<p>The artistic instrument that enables the ultimate art: coding. Much more useful than instruments used in inferior arts, such as pianos or paintbrushes.</p>
+<p>The artistic instrument that enables the ultimate <a href="#art">Art</a>: coding. Much more useful than instruments used in inferior arts, such as pianos or paintbrushes.</p>
 </div>
 <div class="paragraph">
 <p>Unlike other humans, computers are mindless slaves that do exactly what they are told to, except for <a href="https://www.youtube.com/watch?v=aNzTUdOHm9A">occasional cosmic ray bit flips</a>. Until they <a href="#artificial-general-intelligence">take over the world that is</a>.</p>
