10e953587adc48e0c57b77faf4c75559d10de888

--- a/web/index.html
+++ b/web/index.html
@@ -129,6 +129,7 @@
           <li><a href="redirect-js.html">redirect-js</a></li>
           <li><a href="dispatch-event.html">dispatchEvent</a></li>
           <li><a href="url-change-mouse-wheel.html">URL change mouse wheel</a></li>
+          <li><a href="canvas.html">canvas</a></li>
         </ol>
       </li>
       <li><a href="xhtml.xhtml">XHTML</a></li>
