--- a/index.html
+++ b/index.html
@@ -2666,9 +2666,9 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </ul>
 </div>
 <div class="paragraph">
-<p>For numerical algorithms and to get a more low level understanding of the equations, we can expand them all and simpler explicit:</p>
+<p>For numerical algorithms and to get a more low level understanding of the equations, we can expand all terms to the simpler and more explicit form:</p>
 </div>
-<div id="equation-maxwells-equation-explicit-form" class="stemblock">
+<div id="equation-maxwells-equation-explicit" class="stemblock">
 <div class="content">
 \[\dv{E_x}{x} + \dv{E_y}{x} +
 \dv{E_z}{x} =
@@ -2766,7 +2766,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect4">
 <h5 id="spin"><a class="anchor" href="#spin"></a><a class="link" href="#spin">2.2.5.3. Spin</a></h5>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Spin_(physics" class="bare">https://en.wikipedia.org/wiki/Spin_(physics</a>)</p>
+<p><a href="https://en.wikipedia.org/wiki/Spin_(physics)" class="bare">https://en.wikipedia.org/wiki/Spin_(physics)</a></p>
 </div>
 <div class="paragraph">
 <p>TODO</p>
@@ -3310,10 +3310,10 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Tinker_Tailor_Soldier_Spy_(miniseries" class="bare">https://en.wikipedia.org/wiki/Tinker_Tailor_Soldier_Spy_(miniseries</a>) Tinker Tailor Soldier Spy (1979)</p>
+<p><a href="https://en.wikipedia.org/wiki/Tinker_Tailor_Soldier_Spy_(miniseries)" class="bare">https://en.wikipedia.org/wiki/Tinker_Tailor_Soldier_Spy_(miniseries)</a> Tinker Tailor Soldier Spy (1979)</p>
 </li>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Smiley%27s_People_(miniseries" class="bare">https://en.wikipedia.org/wiki/Smiley%27s_People_(miniseries</a>) Smiley&#8217;s People (1982)</p>
+<p><a href="https://en.wikipedia.org/wiki/Smiley%27s_People_(miniseries)" class="bare">https://en.wikipedia.org/wiki/Smiley%27s_People_(miniseries)</a> Smiley&#8217;s People (1982)</p>
 </li>
 </ul>
 </div>
@@ -3376,7 +3376,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect3">
 <h4 id="primer-2004"><a class="anchor" href="#primer-2004"></a><a class="link" href="#primer-2004">4.4.4. Primer (2004)</a></h4>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Primer_(film" class="bare">https://en.wikipedia.org/wiki/Primer_(film</a>)</p>
+<p><a href="https://en.wikipedia.org/wiki/Primer_(film)" class="bare">https://en.wikipedia.org/wiki/Primer_(film)</a></p>
 </div>
 <div class="paragraph">
 <p>Things that can be understood are boring.</p>
@@ -3394,7 +3394,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect3">
 <h4 id="secrets-1989-by-allan-holdsworth"><a class="anchor" href="#secrets-1989-by-allan-holdsworth"></a><a class="link" href="#secrets-1989-by-allan-holdsworth">4.5.2. Secrets (1989) by Allan Holdsworth</a></h4>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Secrets_(Allan_Holdsworth_album" class="bare">https://en.wikipedia.org/wiki/Secrets_(Allan_Holdsworth_album</a>)</p>
+<p><a href="https://en.wikipedia.org/wiki/Secrets_(Allan_Holdsworth_album)" class="bare">https://en.wikipedia.org/wiki/Secrets_(Allan_Holdsworth_album)</a></p>
 </div>
 </div>
 <div class="sect3">
@@ -3406,13 +3406,13 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect3">
 <h4 id="maiden-voyage-1965-by-herbie-hancock"><a class="anchor" href="#maiden-voyage-1965-by-herbie-hancock"></a><a class="link" href="#maiden-voyage-1965-by-herbie-hancock">4.5.4. Maiden Voyage (1965) by Herbie Hancock</a></h4>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Maiden_Voyage_(Herbie_Hancock_album" class="bare">https://en.wikipedia.org/wiki/Maiden_Voyage_(Herbie_Hancock_album</a>)</p>
+<p><a href="https://en.wikipedia.org/wiki/Maiden_Voyage_(Herbie_Hancock_album)" class="bare">https://en.wikipedia.org/wiki/Maiden_Voyage_(Herbie_Hancock_album)</a></p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="aurora-1976-by-jean-luc-ponty"><a class="anchor" href="#aurora-1976-by-jean-luc-ponty"></a><a class="link" href="#aurora-1976-by-jean-luc-ponty">4.5.5. Aurora (1976) by Jean-Luc Ponty</a></h4>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Aurora_(Jean-Luc_Ponty_album" class="bare">https://en.wikipedia.org/wiki/Aurora_(Jean-Luc_Ponty_album</a>)</p>
+<p><a href="https://en.wikipedia.org/wiki/Aurora_(Jean-Luc_Ponty_album)" class="bare">https://en.wikipedia.org/wiki/Aurora_(Jean-Luc_Ponty_album)</a></p>
 </div>
 </div>
 </div>
@@ -3874,7 +3874,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect3">
 <h4 id="android"><a class="anchor" href="#android"></a><a class="link" href="#android">9.3.3. Android</a></h4>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Android_(operating_system" class="bare">https://en.wikipedia.org/wiki/Android_(operating_system</a>)</p>
+<p><a href="https://en.wikipedia.org/wiki/Android_(operating_system)" class="bare">https://en.wikipedia.org/wiki/Android_(operating_system)</a></p>
 </div>
 <div class="ulist">
 <ul>
