8ef0b5f9d75f4acadbdc819093ac866578366c87

--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@ body {
 </li>
 <li><a href="#companies">7. Companies</a>
 <ul class="sectlevel2">
-<li><a href="#apple-inc">7.1. Apple Inc.</a></li>
-<li><a href="#oracle-corporation">7.2. Oracle Corporation</a></li>
+<li><a href="#google">7.1. Google</a></li>
+<li><a href="#apple-inc">7.2. Apple Inc.</a></li>
+<li><a href="#oracle-corporation">7.3. Oracle Corporation</a></li>
 </ul>
 </li>
 <li><a href="#good-and-evil">8. Good and evil</a>
@@ -434,7 +435,7 @@ body {
 <div class="ulist">
 <ul>
 <li>
-<p>answer important questions found through Google which he needs to solve an actual problem he has right now, and for which none of the existing answers satisfied him, and close duplicates.</p>
+<p>answer important questions found through <a href="#google">Google</a> which he needs to solve an actual problem he has right now, and for which none of the existing answers satisfied him, and close duplicates.</p>
 </li>
 <li>
 <p>monitor less known tags which very few people know a lot about, but in which he specializes</p>
@@ -543,7 +544,7 @@ body {
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://github.com/cirosantilli/all-github-commit-emails">All GitHub Commit Emails</a>: he extracted (almost) all Git commit emails from GitHub with Google BigQuery</p>
+<p><a href="https://github.com/cirosantilli/all-github-commit-emails">All GitHub Commit Emails</a>: he extracted (almost) all Git commit emails from GitHub with <a href="#google">Google</a> BigQuery</p>
 </li>
 <li>
 <p><a href="https://github.com/cirosantilli/test-many-commits-1m/">A repository with 1 million commits</a>: likely the <a href="https://www.quora.com/Which-GitHub-repo-has-the-most-commits/answer/Ciro-SantilliI">live repo with the most commits as of 2017</a></p>
@@ -1027,7 +1028,7 @@ body {
 <p><a href="/elf-hello-world">ELF Hello World Tutorial</a> on <a href="https://web.archive.org/web/20170517174951/https://news.ycombinator.com/news">2017-05-17</a></p>
 </li>
 <li>
-<p><a href="/x86-paging">x86 Paging Tutorial</a> on <a href="https://news.ycombinator.com/item?id=13773219">2017-03-02</a>. Number 1 Google search result for "x86 Paging" <a href="https://archive.is/VUSNt">in 2017-08</a>.</p>
+<p><a href="/x86-paging">x86 Paging Tutorial</a> on <a href="https://news.ycombinator.com/item?id=13773219">2017-03-02</a>. Number 1 <a href="#google">Google</a> search result for "x86 Paging" <a href="https://archive.is/VUSNt">in 2017-08</a>.</p>
 </li>
 </ul>
 </div>
@@ -1711,7 +1712,7 @@ body {
 </ul>
 </div>
 <div class="paragraph">
-<p>A younger unrelated Argentinian homonym that can be found through Google:</p>
+<p>A younger unrelated Argentinian homonym that can be found through xref:google[:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -2712,7 +2713,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect4">
 <h5 id="existence-and-uniqueness-of-solutions-to-maxwells-equations"><a class="anchor" href="#existence-and-uniqueness-of-solutions-to-maxwells-equations"></a><a class="link" href="#existence-and-uniqueness-of-solutions-to-maxwells-equations">2.2.2.2. Existence and uniqueness of solutions to Maxwell&#8217;s equations</a></h5>
 <div class="paragraph">
-<p>TODO: I&#8217;m surprised that the Wiki page barely talks about it, and there are few Google hits too! A sample one: <a href="https://www.researchgate.net/publication/228928756_On_the_existence_and_uniqueness_of_Maxwell&#8217;s_equations_in_bounded_domains_with_application_to_magnetotellurics" class="bare">https://www.researchgate.net/publication/228928756_On_the_existence_and_uniqueness_of_Maxwell&#8217;s_equations_in_bounded_domains_with_application_to_magnetotellurics</a></p>
+<p>TODO: I&#8217;m surprised that the Wiki page barely talks about it, and there are few <a href="#google">Google</a> hits too! A sample one: <a href="https://www.researchgate.net/publication/228928756_On_the_existence_and_uniqueness_of_Maxwell&#8217;s_equations_in_bounded_domains_with_application_to_magnetotellurics" class="bare">https://www.researchgate.net/publication/228928756_On_the_existence_and_uniqueness_of_Maxwell&#8217;s_equations_in_bounded_domains_with_application_to_magnetotellurics</a></p>
 </div>
 </div>
 </div>
@@ -3092,7 +3093,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>Using those rules, you choose a target string that you want to reach, and then try to reach it. Before the target string is reached, matematicians call it a <a href="https://en.wikipedia.org/wiki/Conjecture">"conjecture"</a>.</p>
 </div>
 <div class="paragraph">
-<p>Mathematicians call the list of transformation rules used to reach a string a <a href="https://en.wikipedia.org/wiki/Mathematical_proof">"proof"</a>,</p>
+<p>Mathematicians call the list of transformation rules used to reach a string a <a href="https://en.wikipedia.org/wiki/Mathematical_proof">"proof"</a>.</p>
 </div>
 <div class="paragraph">
 <p>Since every step of the proof is very simple and can be verified by a computer automatically, the entire proof can also be automatically vefified by a computer very easily.</p>
@@ -3425,7 +3426,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p><a href="https://en.wikipedia.org/wiki/Stack_Overflow" class="bare">https://en.wikipedia.org/wiki/Stack_Overflow</a></p>
 </div>
 <div class="paragraph">
-<p>The best place to get answers to programming questions as of 2019. Google into Stack Overflow is always the best bet.</p>
+<p>The best place to get answers to programming questions as of 2019. <a href="#google">Google</a> into Stack Overflow is always the best bet.</p>
 </div>
 <div class="paragraph">
 <p>An overview of <a href="#ciro-santilli">Ciro Santilli</a>'s Stack Overflow contribution can be found at: <a href="#ciro-santillis-stack-overflow-contributions">Ciro Santilli&#8217;s Stack Overflow contributions</a>.</p>
@@ -3719,7 +3720,38 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <h2 id="companies"><a class="anchor" href="#companies"></a><a class="link" href="#companies">7. Companies</a></h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="apple-inc"><a class="anchor" href="#apple-inc"></a><a class="link" href="#apple-inc">7.1. Apple Inc.</a></h3>
+<h3 id="google"><a class="anchor" href="#google"></a><a class="link" href="#google">7.1. Google</a></h3>
+<div class="paragraph">
+<p><a href="https://en.wikipedia.org/wiki/Google" class="bare">https://en.wikipedia.org/wiki/Google</a></p>
+</div>
+<div class="paragraph">
+<p>One of the least evil of the <a href="https://en.wikipedia.org/wiki/Big_Four_tech_companies">2019 big four</a>, partly because <a href="https://en.wikipedia.org/wiki/Sergey_Brin">Sergey&#8217;s</a> parents fled from the Soviet Union and so he is anti censorship, although they <a href="https://en.wikipedia.org/wiki/Dragonfly_(search_engine)">have been tempted by it</a>.</p>
+</div>
+<div class="paragraph">
+<p>Google only secedes at highly algorithmic tasks or at giving infinite storage to users to then mine their data.</p>
+</div>
+<div class="paragraph">
+<p>It is incapable however of adding any obvious useful end user features to most of its products, most of which get terminated and cannot be relied on:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Google%2B" class="bare">https://en.wikipedia.org/wiki/Google%2B</a></p>
+</li>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Picasa" class="bare">https://en.wikipedia.org/wiki/Picasa</a></p>
+</li>
+<li>
+<p><a href="https://killedbygoogle.com/" class="bare">https://killedbygoogle.com/</a> | <a href="http://web.archive.org/web/20190726225042/https://killedbygoogle.com/" class="bare">http://web.archive.org/web/20190726225042/https://killedbygoogle.com/</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>One of Google&#8217;s most interesting stories is their startup garage owner <a href="https://en.wikipedia.org/wiki/Susan_Wojcicki">became an important figure inside Google</a>, and how Sergei <a href="https://en.wikipedia.org/wiki/Anne_Wojcicki">married her sister</a>. These were the best garage tenants ever!</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="apple-inc"><a class="anchor" href="#apple-inc"></a><a class="link" href="#apple-inc">7.2. Apple Inc.</a></h3>
 <div class="paragraph">
 <p>An <a href="#united-states-of-america">American</a> company that:</p>
 </div>
@@ -3741,7 +3773,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="oracle-corporation"><a class="anchor" href="#oracle-corporation"></a><a class="link" href="#oracle-corporation">7.2. Oracle Corporation</a></h3>
+<h3 id="oracle-corporation"><a class="anchor" href="#oracle-corporation"></a><a class="link" href="#oracle-corporation">7.3. Oracle Corporation</a></h3>
 <div class="paragraph">
 <p><a href="https://en.wikipedia.org/wiki/Oracle_Corporation" class="bare">https://en.wikipedia.org/wiki/Oracle_Corporation</a></p>
 </div>
@@ -3910,7 +3942,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>if you ever go below the Java API, e.g. to C++ or AOSP build, everything is horrendous and <a href="https://unix.stackexchange.com/questions/122787/how-to-compile-extra-files-into-the-root-directory-of-an-android-rom">undocumented</a></p>
 </li>
 <li>
-<p>Google doesn&#8217;t care about the CLI, even the hello world requires creating infinite out-of-control boilerplate from a GUI: <a href="https://stackoverflow.com/questions/20801042/how-to-create-android-project-with-gradle-from-command-line/46994747#46994747" class="bare">https://stackoverflow.com/questions/20801042/how-to-create-android-project-with-gradle-from-command-line/46994747#46994747</a></p>
+<p><a href="#google">Google</a> doesn&#8217;t care about the CLI, even the hello world requires creating infinite out-of-control boilerplate from a GUI: <a href="https://stackoverflow.com/questions/20801042/how-to-create-android-project-with-gradle-from-command-line/46994747#46994747" class="bare">https://stackoverflow.com/questions/20801042/how-to-create-android-project-with-gradle-from-command-line/46994747#46994747</a></p>
 </li>
 <li>
 <p>the boot is uber bloated and takes forever in cycle simulators</p>
