f8949ed1d6002bed1edee67b4346eb08d93b6a7e

--- a/index.html
+++ b/index.html
@@ -2047,6 +2047,12 @@ git commit -m 'update gems'</pre>
 <p><a href="education" class="bare">education</a></p>
 </li>
 <li>
+<p><a href="interests" class="bare">interests</a></p>
+</li>
+<li>
+<p><a href="projects" class="bare">projects</a></p>
+</li>
+<li>
 <p><a href="skills" class="bare">skills</a></p>
 </li>
 </ul>
