--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@ body {
 <a href="#accounts-controlled-by-ciro-santilli">Other accounts</a></p>
 </div>
 <div class="paragraph">
+<p>Source code of this website: <a href="https://github.com/cirosantilli/cirosantilli.github.io" class="bare">https://github.com/cirosantilli/cirosantilli.github.io</a></p>
+</div>
+<div class="paragraph">
 <p><a href="ciro-santilli-id-photo-2013.jpg"><span class="image"><img src="ciro-santilli-id-photo-2013.jpg" alt="ciro santilli id photo 2013" height="300"></span></a> <a href="ciro-santilli-logo.png"><span class="image"><img src="ciro-santilli-logo.png" alt="ciro santilli logo" height="300"></span></a></p>
 </div>
 <div id="toc" class="toc">
@@ -3827,7 +3830,7 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect2">
 <h3 id="how-to-teach--advertise-your-material"><a class="anchor" href="#how-to-teach--advertise-your-material"></a><a class="link" href="#how-to-teach--advertise-your-material">6.6. Advertise your material</a></h3>
 <div class="paragraph">
-<p>Once you have crated something awesome, you have to advertise it, otherwise no one will ever find.</p>
+<p>Once you have crated something awesome, you have to advertise it, otherwise no one will ever find it.</p>
 </div>
 <div class="paragraph">
 <p>This means:</p>
@@ -3847,6 +3850,18 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <p>whenever someone asks as question on an online forum, answer it, and link to the section of your material that also answers that question.</p>
 <div class="paragraph">
 <p>The material will answer many of their future questions.</p>
+</div>
+</li>
+<li>
+<p>after you&#8217;ve done something awesome, xerf:google[] possible relevant keywords that should hit it.</p>
+<div class="paragraph">
+<p>This will lead you to other websites that talk about the same content.</p>
+</div>
+<div class="paragraph">
+<p>Then, leave comments on those pages linking to your stuff, or email the authors of those pages.</p>
+</div>
+<div class="paragraph">
+<p>It is borderline spam, but if the subject is closely related, it is a win for everyone.</p>
 </div>
 </li>
 </ul>
