--- a/docinfo.html
+++ b/docinfo.html
@@ -6,6 +6,212 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-47867706-1', 'auto');
 ga('send', 'pageview');
+
+// Load required scripts dynamically:
+//
+// * https://stackoverflow.com/questions/7308908/waiting-for-dynamically-loaded-script/57267538#57267538
+// * https://stackoverflow.com/questions/14521108/dynamically-load-js-inside-js/14521482#14521482
+// * https://stackoverflow.com/questions/10004112/how-can-i-wait-for-set-of-asynchronous-callback-functions
+//
+// We use to reduce the initial load time.
+//
+// Each script is loaded only once after it has finished loading for the first time,
+// even if this function is called multiple times.
+async function cirosantilli_load_scripts(script_urls) {
+    function load(script_url) {
+        return new Promise(function(resolve, reject) {
+            if (cirosantilli_load_scripts.loaded.has(script_url)) {
+                resolve();
+            } else {
+                var script = document.createElement('script');
+                script.onload = resolve;
+                script.src = script_url
+                document.head.appendChild(script);
+            }
+        });
+    }
+    var promises = [];
+    for (const script_url of script_urls) {
+        promises.push(load(script_url));
+    }
+    await Promise.all(promises);
+    for (const script_url of script_urls) {
+        cirosantilli_load_scripts.loaded.add(script_url);
+    }
+}
+cirosantilli_load_scripts.loaded = new Set();
+
+// Create some nice controls for a canvas demo!
+class CirosantilliCanvasDemo {
+    constructor(demo_id, enabled = false) {(async () => {
+        // Members.
+        this.time = 0;
+        this.demo_id = demo_id;
+
+        // Random variables.
+        // https://stackoverflow.com/questions/19764018/controlling-fps-with-requestanimationframe
+        this.fps_limit_then = Date.now();
+        this.fps_last_date = new Date();
+
+        // HTML.
+        var canvas_wrapper = document.createElement('div');
+        canvas_wrapper.setAttribute('class', 'canvas-demo');
+        document.currentScript.parentNode.insertBefore(canvas_wrapper, document.currentScript);
+
+        // Enable disable.
+        this.enable_input = document.createElement('input');
+        this.enable_input.setAttribute('type', 'checkbox');
+        this.enable_input.setAttribute('value', '5');
+        this.enable_input.setAttribute('min', '1');
+        if (enabled) {
+            this.enable_input.setAttribute('checked', '');
+        }
+        this.enable_input.addEventListener('change', async () => {
+            await this.init();
+        });
+        var enable_label = document.createElement('label');
+        enable_label.appendChild(document.createTextNode('Enable: '));
+        enable_label.appendChild(this.enable_input);
+        enable_label.appendChild(document.createTextNode('<-- (click this to run!!!)'));
+        this.enable_div = document.createElement('div');
+        this.enable_div.appendChild(enable_label);
+        canvas_wrapper.appendChild(this.enable_div);
+
+        // All inputs and info entries.
+        this.fps_span = this.addInfoSpanAfterEnable('FPS');
+        this.total_frames_span = this.addInfoSpanAfterEnable('Total frames');
+        this.fps_granule_input = this.addInputAfterEnable(
+            'FPS granule',
+            {
+                'min': '1',
+                'type': 'number',
+                'value': '5'
+            }
+        );
+        this.fps_limit_input = this.addInputAfterEnable(
+            'FPS limit',
+            {
+                'min': '1',
+                'type': 'number'
+            }
+        );
+        this.save_images_input = this.addInputAfterEnable(
+            'Save images',
+            {
+                'type': 'checkbox',
+            }
+        );
+        this.canvas_width_input = this.addInputAfterEnable(
+            'canvas width',
+            {
+                'min': '1',
+                'type': 'number',
+                'value': '128'
+            }
+        );
+
+        // Canvas.
+        this.canvas = document.createElement('canvas');
+        this.canvas.setAttribute('style', 'border:1px solid black;');
+        canvas_wrapper.appendChild(this.canvas);
+        this.ctx = this.canvas.getContext('2d');
+        this.init_done = false;
+        this.resizeCanvas();
+        await this.init();
+    })()}
+
+    addInputAfterEnable(label, attributes) {
+        var input = document.createElement('input');
+        for (var key in attributes) {
+            input.setAttribute(key, attributes[key]);
+        }
+        var div = document.createElement('div');
+        div.appendChild(document.createTextNode(label + ': '));
+        div.appendChild(input);
+        this.enable_div.parentNode.insertBefore(div, this.enable_div.nextSibling);
+        return input;
+    }
+
+    addInfoSpanAfterEnable(label) {
+        var span = document.createElement('span');
+        var div = document.createElement('div');
+        div.appendChild(document.createTextNode(label + ': '));
+        div.appendChild(span);
+        this.enable_div.parentNode.insertBefore(div, this.enable_div.nextSibling);
+        return span;
+
+    }
+
+    animate() {
+        var fps_limit = parseFloat(this.fps_limit_input.value);
+        if (!isNaN(fps_limit)) {
+            var fps_limit_time_millis = 1000.0 / fps_limit;
+            var now = Date.now();
+            var fps_limit_elapsed = now - this.fps_limit_then;
+        }
+        if (isNaN(fps_limit) || (fps_limit_elapsed > fps_limit_time_millis)) {
+            if (!isNaN(fps_limit)) {
+                this.fps_limit_then = now - (fps_limit_elapsed % fps_limit_time_millis);
+            }
+            this.resizeCanvas();
+
+            // The actual drawing.
+            this.draw();
+
+            // Save the images to files.
+            // https://stackoverflow.com/questions/19235286/convert-html5-canvas-sequence-to-a-video-file/57153718#57153718
+            if (this.save_images_input.checked) {
+                this.canvas.toBlob(this.constructor.createBlobFunc(this.demo_id, this.time));
+            }
+            this.time++;
+            this.total_frames_span.innerHTML = this.time.toString();
+
+            /* FPS calculation. */
+            var fps_granule = parseInt(this.fps_granule_input.value);
+            if (this.time % fps_granule == 0) {
+                var fps_date = Date.now();
+                this.fps_span.innerHTML = (1000.0 * fps_granule / (fps_date - this.fps_last_date)).toFixed(2);
+                this.fps_last_date = fps_date;
+            }
+        }
+        if (this.enable_input.checked) {
+            window.requestAnimationFrame(this.animate.bind(this));
+        }
+    }
+
+    // We need this to fix time because toBlob calls are asynchronous.
+    static createBlobFunc(demo_id, time) {
+        return (blob) => {
+            // From FileSaver.js.
+            saveAs(blob, `canvas-${demo_id}-${time}.png`);
+        };
+    }
+
+    draw() {
+        throw new Error('unimplemented');
+    }
+
+    async init() {
+        if (this.enable_input.checked) {
+            if (!this.init_done) {
+                await cirosantilli_load_scripts(['https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js']);
+                this.init_done = true;
+            }
+            window.requestAnimationFrame(this.animate.bind(this));
+        };
+    }
+
+    resizeCanvas() {
+        var canvas_width = parseInt(this.canvas_width_input.value);
+        if (isNaN(canvas_width)) {
+            canvas_width = parseInt(this.canvas_width_input.getAttribute('value'));
+        }
+        this.canvas.width = canvas_width;
+        this.canvas.height = canvas_width;
+        this.width = canvas_width
+        this.height = canvas_width
+    }
+}
 </script>
 <link rel="shortcut icon" type="image/x-icon" href="/ciro-santilli-id-photo-2013.jpg" />
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
@@ -18,6 +224,9 @@ ga('send', 'pageview');
 <style>
 body {
   padding-left: 10px;
+}
+label {
+    font-weight: normal !important;
 }
 .imageblock {
   margin-bottom: 10px;
