--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ cirosantilli_load_scripts.loaded = new Set();
 
 // Create some nice controls for a canvas demo!
 class CirosantilliCanvasDemo {
-    constructor(demo_id, enabled = false) {(async () => {
+    constructor(demo_id, enabled = false, context_type = '2d') {(async () => {
         // Members.
         this.time = 0;
         this.demo_id = demo_id;
@@ -123,7 +123,7 @@ class CirosantilliCanvasDemo {
         this.canvas = document.createElement('canvas');
         this.canvas.setAttribute('style', 'border:1px solid black;');
         canvas_wrapper.appendChild(this.canvas);
-        this.ctx = this.canvas.getContext('2d');
+        this.ctx = this.canvas.getContext(context_type);
         this.init_done = false;
         this.resizeCanvas();
         await this.init();
@@ -540,6 +540,7 @@ label {
 <li><a href="#javascript">10.1.1. JavaScript</a>
 <ul class="sectlevel4">
 <li><a href="#html-canvas">10.1.1.1. HTML canvas</a></li>
+<li><a href="#webgl">10.1.1.2. WebGL</a></li>
 </ul>
 </li>
 </ul>
@@ -4517,8 +4518,8 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 </div>
 <script>
 new class extends CirosantilliCanvasDemo {
-    constructor(demo_id, enabled) {
-        super(demo_id, enabled);
+    constructor() {
+        super('hello');
         this.pixel_size_input = this.addInputAfterEnable(
             'Pixel size',
             {
@@ -4543,13 +4544,72 @@ new class extends CirosantilliCanvasDemo {
                 this.ctx.fillRect(x, y, pixel_size, pixel_size);
             }
         }
-
     }
-}('hello');
+}();
 </script>
 <div class="paragraph">
 <p>Bibliography: <a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations"&gt;https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations" class="bare">https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations"&gt;https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations</a></p>
 </div>
+</div>
+<div class="sect4">
+<h5 id="webgl"><a class="anchor" href="#webgl"></a><a class="link" href="#webgl">10.1.1.2. WebGL</a></h5>
+<div class="paragraph">
+<p><a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/By_example" class="bare">https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/By_example</a></p>
+</div>
+<script>
+new class extends CirosantilliCanvasDemo {
+    constructor() {
+        super('hello', undefined, 'webgl');
+        this.ctx.viewport(0, 0, this.ctx.drawingBufferWidth, this.ctx.drawingBufferHeight);
+        this.ctx.clearColor(0.0, 0.0, 0.0, 1.0);
+        this.vertexShaderSource = `
+#version 100
+precision highp float;
+attribute float position;
+void main() {
+    gl_Position = vec4(position, 0.0, 0.0, 1.0);
+    gl_PointSize = 64.0;
+}
+`;
+
+        this.fragmentShaderSource = `
+#version 100
+precision mediump float;
+void main() {
+    gl_FragColor = vec4(0.18, 0.0, 0.34, 1.0);
+}
+`;
+        this.vertexShader = this.ctx.createShader(this.ctx.VERTEX_SHADER);
+        this.ctx.shaderSource(this.vertexShader, this.vertexShaderSource);
+        this.ctx.compileShader(this.vertexShader);
+        this.fragmentShader = this.ctx.createShader(this.ctx.FRAGMENT_SHADER);
+        this.ctx.shaderSource(this.fragmentShader, this.fragmentShaderSource);
+        this.ctx.compileShader(this.fragmentShader);
+        this.program = this.ctx.createProgram();
+        this.ctx.attachShader(this.program, this.vertexShader);
+        this.ctx.attachShader(this.program, this.fragmentShader);
+        this.ctx.linkProgram(this.program);
+        this.ctx.detachShader(this.program, this.vertexShader);
+        this.ctx.detachShader(this.program, this.fragmentShader);
+        this.ctx.deleteShader(this.vertexShader);
+        this.ctx.deleteShader(this.fragmentShader);
+        if (!this.ctx.getProgramParameter(this.program, this.ctx.LINK_STATUS)) {
+            console.log('error ' + this.ctx.getProgramInfoLog(this.program));
+            return;
+        }
+        this.ctx.enableVertexAttribArray(0);
+        var buffer = this.ctx.createBuffer();
+        this.ctx.bindBuffer(this.ctx.ARRAY_BUFFER, buffer);
+        this.ctx.vertexAttribPointer(0, 1, this.ctx.FLOAT, false, 0, 0);
+        this.ctx.useProgram(this.program);
+    }
+    draw() {
+        this.ctx.clear(this.ctx.COLOR_BUFFER_BIT);
+        this.ctx.bufferData(this.ctx.ARRAY_BUFFER, new Float32Array([Math.sin(this.time / 60.0)]), this.ctx.STATIC_DRAW);
+        this.ctx.drawArrays(this.ctx.POINTS, 0, 1);
+    }
+}('webgl', undefined, 'webgl');
+</script>
 </div>
 </div>
 </div>
