f3ef2bc00ce0d57f72b33dbfbaf97c88e4feecbd

--- a/markdown-style-guide.html
+++ b/markdown-style-guide.html
@@ -243,7 +243,7 @@
 
 <p>The <a href="https://github.com/asciidoctor/asciidoctor">Asciidoctor implementation</a> is likely the best choice as of 2019.</p>
 
-<p>AsciiDoc It takes markdown, and adds just enough to write serious books, while reducing some markdown annoyances at the same time.</p>
+<p>AsciiDoc takes Markdown, and adds just enough to write serious books, while reducing some markdown annoyances at the same time.</p>
 
 <p>Here is one example of what you can achieve on GitHub with a <code class="highlighter-rouge">README.adoc</code>: <a href="https://github.com/cirosantilli/linux-kernel-module-cheat/tree/v3.0#linux-kernel-module-cheat">https://github.com/cirosantilli/linux-kernel-module-cheat/tree/v3.0#linux-kernel-module-cheat</a></p>
 
