--- a/index.html
+++ b/index.html
@@ -269,12 +269,6 @@ class CirosantilliCanvasDemo {
 </script>
 <link rel="shortcut icon" type="image/x-icon" href="/ciro-santilli-id-photo-2013.jpg" />
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css"
-  crossorigin="anonymous"
-  integrity="sha384-yFRtMMDnQtDRO8rLpMIKrtPCD5jdktao2TV19YiZYWMDkUR5GQZR/NOVTdquEx1j"
->
 <style>
 body {
   padding-left: 10px;
@@ -293,6 +287,15 @@ label {
 }
 /* Custom style. */
 </style>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css"
+  crossorigin="anonymous"
+>
+<style>
+.katex { font-size: 1.5em; }
+</style>
+
 </head>
 <body class="article">
 <div id="header">
@@ -582,10 +585,11 @@ label {
 <ul class="sectlevel2">
 <li><a href="#programming-languages">10.1. Programming languages</a>
 <ul class="sectlevel3">
-<li><a href="#javascript">10.1.1. JavaScript</a>
+<li><a href="#javascript">10.1.1. JavaScript</a></li>
+<li><a href="#web-cheat">10.1.2. Web cheat</a>
 <ul class="sectlevel4">
-<li><a href="#html-canvas">10.1.1.1. HTML canvas</a></li>
-<li><a href="#webgl">10.1.1.2. WebGL</a></li>
+<li><a href="#html-canvas">10.1.2.1. HTML canvas</a></li>
+<li><a href="#webgl">10.1.2.2. WebGL</a></li>
 </ul>
 </li>
 </ul>
@@ -4550,8 +4554,50 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="paragraph">
 <p>Hopefully will be killed by <a href="https://en.wikipedia.org/wiki/WebAssembly">WebAssembly</a> one day.</p>
 </div>
+</div>
+<div class="sect3">
+<h4 id="web-cheat"><a class="anchor" href="#web-cheat"></a><a class="link" href="#web-cheat">10.1.2. Web cheat</a></h4>
+<div class="paragraph">
+<p>Cheatsheet on HTML, CSS and JavaScript.</p>
+</div>
+<div class="paragraph">
+<p>Old cheat at: <a href="web/" class="bare">web/</a></p>
+</div>
+<div class="paragraph">
+<p>Now moving to either:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>files under: <a href="web-cheat/" class="bare">web-cheat/</a> for the boring stuff</p>
+</li>
+<li>
+<p>subsections under this section for the more exciting stuff!</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Index:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>JavaScript</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="web-cheat/js-image-load.html" class="bare">web-cheat/js-image-load.html</a>: load an image from JavaScript dynamically: <a href="https://stackoverflow.com/questions/226847/what-is-the-best-javascript-code-to-create-an-img-element" class="bare">https://stackoverflow.com/questions/226847/what-is-the-best-javascript-code-to-create-an-img-element</a></p>
+</li>
+<li>
+<p><a href="web-cheat/js-image-load.html" class="bare">web-cheat/js-image-load.html</a>: load an image from JavaScript dynamically when it would become visible on the viewport: <a href="https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport" class="bare">https://stackoverflow.com/questions/2321907/how-do-you-make-images-load-only-when-they-are-in-the-viewport</a></p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
 <div class="sect4">
-<h5 id="html-canvas"><a class="anchor" href="#html-canvas"></a><a class="link" href="#html-canvas">10.1.1.1. HTML canvas</a></h5>
+<h5 id="html-canvas"><a class="anchor" href="#html-canvas"></a><a class="link" href="#html-canvas">10.1.2.1. HTML canvas</a></h5>
 <div class="paragraph">
 <p><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API" class="bare">https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API</a></p>
 </div>
@@ -4597,7 +4643,7 @@ new class extends CirosantilliCanvasDemo {
 </div>
 </div>
 <div class="sect4">
-<h5 id="webgl"><a class="anchor" href="#webgl"></a><a class="link" href="#webgl">10.1.1.2. WebGL</a></h5>
+<h5 id="webgl"><a class="anchor" href="#webgl"></a><a class="link" href="#webgl">10.1.2.2. WebGL</a></h5>
 <div class="paragraph">
 <p><a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/By_example" class="bare">https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/By_example</a></p>
 </div>
